force-app/main/default/objects/Stipend__c/Stipend__c.object-meta.xml
<CustomObject>
    <label>Stipend</label>
    <nameField>
        <label>Stipend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stipends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>