force-app/main/default/objects/Stipend__c/fields/of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>of_Weeks__c</fullName>
    <label># of Weeks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>