force-app/main/default/objects/Stipend__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>Launchpad__Program__c</referenceTo>
    <relationshipLabel>Stipends</relationshipLabel>
    <relationshipName>Stipends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>