force-app/main/default/objects/Stipend__c/fields/Stipend_Type__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Type__c</fullName>
    <label>Stipend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>