force-app/main/default/objects/Stipend__c/fields/Weekly_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Stipend__c</fullName>
    <label>Weekly Stipend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>